@@ -1,10 +1,0 @@
-Kyua (pronounced Q.A.) is a testing framework for both developers and
-users.  Kyua is different from most other testing frameworks in that it
-puts the end user experience before anything else.  There are multiple
-reasons for users to run the tests themselves, and Kyua ensures that
-they can do so in the most convenient way.
-
-This module, kyua-testers, provides scriptable interfaces to interact
-with test programs of various kinds.  The interface of such testers
-allows the caller to execute a single test case of a single test program
-in a controlled and homogeneous manner.
